src/main/gen/uk/modl/parser/antlr/MODLParser.java
// Generated from /Users/alex/code/NUM/MODL/MODL_grammar/src/main/java/uk/modl/parser/antlr/MODLParser.g4 by ANTLR 4.7
package uk.modl.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MODLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NULL=1, TRUE=2, FALSE=3, WS=4, NEWLINE=5, COLON=6, EQUALS=7, SC=8, LBRAC=9, 
		RBRAC=10, LSBRAC=11, RSBRAC=12, NUMBER=13, COMMENT=14, STRING=15, HASH_PREFIX=16, 
		QUOTED=17, GRAVED=18, LCBRAC=19, CWS=20, QMARK=21, FSLASH=22, GTHAN=23, 
		LTHAN=24, ASTERISK=25, AMP=26, PIPE=27, EXCLAM=28, CCOMMENT=29, RCBRAC=30;
	public static final int
		RULE_modl = 0, RULE_structure = 1, RULE_map = 2, RULE_array = 3, RULE_pair = 4, 
		RULE_top_level_conditional = 5, RULE_top_level_conditional_return = 6, 
		RULE_map_conditional = 7, RULE_map_conditional_return = 8, RULE_map_item = 9, 
		RULE_array_conditional = 10, RULE_array_conditional_return = 11, RULE_array_item = 12, 
		RULE_value_conditional = 13, RULE_value_conditional_return = 14, RULE_value_item = 15, 
		RULE_condition_test = 16, RULE_condition = 17, RULE_condition_group = 18, 
		RULE_value = 19;
	public static final String[] ruleNames = {
		"modl", "structure", "map", "array", "pair", "top_level_conditional", 
		"top_level_conditional_return", "map_conditional", "map_conditional_return", 
		"map_item", "array_conditional", "array_conditional_return", "array_item", 
		"value_conditional", "value_conditional_return", "value_item", "condition_test", 
		"condition", "condition_group", "value"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'{'", null, "'?'", "'/'", "'>'", 
		"'<'", "'*'", "'&'", "'|'", "'!'", null, "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NULL", "TRUE", "FALSE", "WS", "NEWLINE", "COLON", "EQUALS", "SC", 
		"LBRAC", "RBRAC", "LSBRAC", "RSBRAC", "NUMBER", "COMMENT", "STRING", "HASH_PREFIX", 
		"QUOTED", "GRAVED", "LCBRAC", "CWS", "QMARK", "FSLASH", "GTHAN", "LTHAN", 
		"ASTERISK", "AMP", "PIPE", "EXCLAM", "CCOMMENT", "RCBRAC"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MODLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MODLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModlContext extends ParserRuleContext {
		public List<StructureContext> structure() {
			return getRuleContexts(StructureContext.class);
		}
		public StructureContext structure(int i) {
			return getRuleContext(StructureContext.class,i);
		}
		public TerminalNode EOF() { return getToken(MODLParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MODLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MODLParser.NEWLINE, i);
		}
		public List<TerminalNode> SC() { return getTokens(MODLParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(MODLParser.SC, i);
		}
		public ModlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterModl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitModl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitModl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModlContext modl() throws RecognitionException {
		ModlContext _localctx = new ModlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_modl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(40);
				match(NEWLINE);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			structure();
			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(59);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(47);
						match(SC);
						}
						break;
					case 2:
						{
						setState(49); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(48);
							match(NEWLINE);
							}
							}
							setState(51); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NEWLINE );
						}
						break;
					case 3:
						{
						setState(53);
						match(SC);
						setState(55); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(54);
							match(NEWLINE);
							}
							}
							setState(57); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( _la==NEWLINE );
						}
						break;
					}
					setState(61);
					structure();
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SC) {
				{
				setState(67);
				match(SC);
				}
			}

			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(70);
				match(NEWLINE);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureContext extends ParserRuleContext {
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public Top_level_conditionalContext top_level_conditional() {
			return getRuleContext(Top_level_conditionalContext.class,0);
		}
		public PairContext pair() {
			return getRuleContext(PairContext.class,0);
		}
		public StructureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitStructure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureContext structure() throws RecognitionException {
		StructureContext _localctx = new StructureContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_structure);
		try {
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LBRAC:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				map();
				}
				break;
			case LSBRAC:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				array();
				}
				break;
			case LCBRAC:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				top_level_conditional();
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				pair();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public TerminalNode LBRAC() { return getToken(MODLParser.LBRAC, 0); }
		public List<Map_itemContext> map_item() {
			return getRuleContexts(Map_itemContext.class);
		}
		public Map_itemContext map_item(int i) {
			return getRuleContext(Map_itemContext.class,i);
		}
		public TerminalNode RBRAC() { return getToken(MODLParser.RBRAC, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MODLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MODLParser.NEWLINE, i);
		}
		public List<TerminalNode> SC() { return getTokens(MODLParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(MODLParser.SC, i);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterMap(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitMap(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitMap(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MapContext map() throws RecognitionException {
		MapContext _localctx = new MapContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_map);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(LBRAC);
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(85);
				match(NEWLINE);
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			map_item();
			setState(104);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(93);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SC) {
						{
						setState(92);
						match(SC);
						}
					}

					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(95);
						match(NEWLINE);
						}
						}
						setState(100);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(101);
					map_item();
					}
					} 
				}
				setState(106);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(107);
				match(NEWLINE);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			match(RBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayContext extends ParserRuleContext {
		public TerminalNode LSBRAC() { return getToken(MODLParser.LSBRAC, 0); }
		public List<Array_itemContext> array_item() {
			return getRuleContexts(Array_itemContext.class);
		}
		public Array_itemContext array_item(int i) {
			return getRuleContext(Array_itemContext.class,i);
		}
		public TerminalNode RSBRAC() { return getToken(MODLParser.RSBRAC, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MODLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MODLParser.NEWLINE, i);
		}
		public List<TerminalNode> SC() { return getTokens(MODLParser.SC); }
		public TerminalNode SC(int i) {
			return getToken(MODLParser.SC, i);
		}
		public ArrayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterArray(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitArray(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitArray(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayContext array() throws RecognitionException {
		ArrayContext _localctx = new ArrayContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(LSBRAC);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(116);
				match(NEWLINE);
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			array_item();
			setState(135);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==SC) {
						{
						setState(123);
						match(SC);
						}
					}

					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==NEWLINE) {
						{
						{
						setState(126);
						match(NEWLINE);
						}
						}
						setState(131);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(132);
					array_item();
					}
					} 
				}
				setState(137);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SC) {
				{
				setState(138);
				match(SC);
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(141);
				match(NEWLINE);
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(147);
			match(RSBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PairContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(MODLParser.STRING, 0); }
		public TerminalNode EQUALS() { return getToken(MODLParser.EQUALS, 0); }
		public List<Value_itemContext> value_item() {
			return getRuleContexts(Value_itemContext.class);
		}
		public Value_itemContext value_item(int i) {
			return getRuleContext(Value_itemContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(MODLParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(MODLParser.COLON, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MODLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MODLParser.NEWLINE, i);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public PairContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pair; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterPair(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitPair(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitPair(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PairContext pair() throws RecognitionException {
		PairContext _localctx = new PairContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pair);
		int _la;
		try {
			int _alt;
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(STRING);
				setState(150);
				match(EQUALS);
				setState(151);
				value_item();
				setState(162);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(155);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la==NEWLINE) {
							{
							{
							setState(152);
							match(NEWLINE);
							}
							}
							setState(157);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(158);
						match(COLON);
						setState(159);
						value_item();
						}
						} 
					}
					setState(164);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				match(STRING);
				setState(166);
				map();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				match(STRING);
				setState(168);
				array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Top_level_conditionalContext extends ParserRuleContext {
		public TerminalNode LCBRAC() { return getToken(MODLParser.LCBRAC, 0); }
		public List<Condition_testContext> condition_test() {
			return getRuleContexts(Condition_testContext.class);
		}
		public Condition_testContext condition_test(int i) {
			return getRuleContext(Condition_testContext.class,i);
		}
		public List<TerminalNode> QMARK() { return getTokens(MODLParser.QMARK); }
		public TerminalNode QMARK(int i) {
			return getToken(MODLParser.QMARK, i);
		}
		public List<Top_level_conditional_returnContext> top_level_conditional_return() {
			return getRuleContexts(Top_level_conditional_returnContext.class);
		}
		public Top_level_conditional_returnContext top_level_conditional_return(int i) {
			return getRuleContext(Top_level_conditional_returnContext.class,i);
		}
		public TerminalNode RCBRAC() { return getToken(MODLParser.RCBRAC, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(MODLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MODLParser.NEWLINE, i);
		}
		public List<TerminalNode> FSLASH() { return getTokens(MODLParser.FSLASH); }
		public TerminalNode FSLASH(int i) {
			return getToken(MODLParser.FSLASH, i);
		}
		public Top_level_conditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_top_level_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).enterTop_level_conditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MODLParserListener ) ((MODLParserListener)listener).exitTop_level_conditional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MODLParserVisitor ) return ((MODLParserVisitor<? extends T>)visitor).visitTop_level_conditional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Top_level_conditionalContext top_level_conditional() throws RecognitionException {
		Top_level_conditionalContext _localctx = new Top_level_conditionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_top_level_conditional);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(LCBRAC);
			setState(175);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(172);
					match(NEWLINE);
					}
					} 
				}
				setState(177);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			setState(178);
			condition_test();
			setState(179);
			match(QMARK);
			setState(183);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(180);
				match(NEWLINE);
				}
				}
				setState(185);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(186);
			top_level_conditional_return();
			setState(190);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(187);
					match(NEWLINE);
					}
					} 
				}
				setState(192);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,24,_ctx);
			}
			setState(213);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FSLASH) {
				{
				{
				setState(193);
				match(FSLASH);
				setState(197);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(194);
						match(NEWLINE);
						}
						} 
					}
					setState(199);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NULL) | (1L << TRUE) | (1L << FALSE) | (1L << NEWLINE) | (1L << EQUALS) | (1L << LBRAC) | (1L << LSBRAC) | (1L << NUMBER) | (1L << STRING) | (1L << QUOTED) | (1L << LCBRAC) | (1L << GTHAN) | (1L << LTHAN) | (1L << ASTERISK) | (1L << EXCLAM))) != 0)) {
					{
					setState(200);
					condition_test();
					}
				}

				setState(203);
				match(QMARK);
				setState(207);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(204);
					match(NEWLINE);
					}
					}
					setState(209);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(210);
				top_level_conditional_return();
				}
				}
				setState(215);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(216);
				match(NEWLINE);
				}
				}
				setState(221);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(222);
			match(RCBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
